--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <div id="nav">
 	<span class="navLeft"></span>
     <ul class="navCenter">
-    	<li><a href="#">网站首页</a></li>
-        <li><a href="list.html">公司新闻</a></li>
-        <li><a href="#">行业动态</a></li>
-        <li><a href="#">基地管理</a></li>
-        <li><a href="#">会员服务</a></li>
-        <li><a href="#">网上购物</a></li>
-        <li><a href="#">产品展示</a></li>
-        <li><a href="#">关于我们</a></li>
+    	<li><a href="#">首页</a></li>
+        <li><a href="list.html">新闻</a></li>
+        <li><a href="#">动态</a></li>
+        <li><a href="#">管理</a></li>
+        <li><a href="#">服务</a></li>
+        <li><a href="#">购物</a></li>
+        <li><a href="#">展示</a></li>
+        <li><a href="#">我们</a></li>
         <li class="noBg"><a href="#">ENGLISH</a></li>
     </ul>
     <span class="navRight"></span>
