--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>费兹威廉卡戎</title>
-<link rel="stylesheet" type="text/css" href="styles.css"
+<link rel="stylesheet" type="text/css" href="style.css"
 </head>
 
 <body>
-	
+<div>why are you so cat,be more dog.</div>
+<div>Love me, love my dog.</div>
 <div>If you smile when no one else is around, you really mean it.
 如果你独自一人笑了，那是真心的笑。</div>
-
+<div>Goals determine what you are going to be.
+目标决定你将成为什么样的人。</div>
+<div>Firsthand experience is often necessary for personal growth.
+亲身体验通常是成长所必须的。</div>
+<div>Be slow to promise and quick to perform.
+不轻诺，诺必果。</div>
+<div>Only in the darkness can you see the stars.
+只有在黑暗中才能看到璀璨的星辰。</div>
+<div>The longest day has an end.
+最难过的日子也有尽头。</div>
+<div>Sometimes your whole life boils down to one insane move.
+人一辈子，有时就靠一次疯狂的举动扭转乾坤。</div>
+<div>If you want something done, do it yourself.
+欲成大事，事必躬亲</div>
 </body>
 </html>
